--- a/lg-cfg/tags.yaml
+++ b/lg-cfg/tags.yaml
@@ -26,3 +26,5 @@ tag-sets:
         title: "Самодиагностика"
       starter:
         title: "Стартовая конфигурация"
+      send-to-ai:
+        title: "Отправка в AI"
