--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -39,12 +39,6 @@ settings.open.editable.comment=By default, files open as read-only
 settings.install.strategy.MANAGED_VENV=Managed Virtual Environment
 settings.install.strategy.SYSTEM=System Python
 settings.install.strategy.PIPX=pipx
-
-### AiProvider
-settings.ai.provider.CLIPBOARD=Clipboard
-settings.ai.provider.JETBRAINS_AI=JetBrains AI Assistant
-settings.ai.provider.JUNIE=Junie AI
-settings.ai.provider.OPENAI_API=OpenAI API
 cli.test.failure.exception=Unexpected error:\n\n{0}
 cli.test.progress.title=Testing CLI Connection...
 
@@ -194,6 +188,12 @@ action.show.included.text=Show Included Files
 action.show.included.description=Load and display files included in selected section
 action.show.included.progress=Loading Included Files — {0}
 action.show.included.progress.text=Loading included files for section ''{0}''...
+
+## Send to AI Action
+action.send.ai.text=Send to AI
+action.send.ai.description=Send generated content to configured AI provider
+action.send.ai.progress=Sending to AI — {0}
+action.send.ai.progress.text=Generating content for ''{0}''...
 
 ## Doctor Diagnostics Action
 action.doctor.text=Run Diagnostics
