Утилита для обобщенной обработки результатов выполнения CLI команд

--- a/lg-cfg/sections.yaml
+++ b/lg-cfg/sections.yaml
@@ -71,6 +71,7 @@ src:
                           allow:
                             - "/cli/CliResolver.kt"
                             - "/cli/CliException.kt"
+                            - "/cli/CliResultHandler.kt"
                             - "/listeners/LgSettingsChangeListener.kt"
                         - condition: "TAGSET:intellij-plugin:stats"
                           allow:
