--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ platformVersion = 2024.3
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
 platformPlugins =
 # Example: platformBundledPlugins = com.intellij.java
+# Git4Idea - for Git integration (optional)
 platformBundledPlugins = Git4Idea
 # Example: platformBundledModules = intellij.spellchecker
 platformBundledModules =
