--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -51,6 +51,9 @@
     <!-- Optional Git integration -->
     <depends optional="true" config-file="withGit.xml">Git4Idea</depends>
     
+    <!-- Optional JetBrains AI Assistant integration -->
+    <depends optional="true" config-file="withJetBrainsAi.xml">com.intellij.ml.llm</depends>
+    
     <!-- Resource bundle for localization -->
     <resource-bundle>messages.LgBundle</resource-bundle>
     
