--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,8 @@ platformVersion = 2024.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
+# Note: com.intellij.ml.llm and com.github.copilot are paid/subscription plugins
+# They can be installed manually in sandbox and will persist between runs
 platformPlugins =
 # Example: platformBundledPlugins = com.intellij.java
 # Git4Idea - for Git integration (optional)
