Добавление `AiInteractionMode` в AI-контекст

--- a/lg-cfg/sections.yaml
+++ b/lg-cfg/sections.yaml
@@ -143,3 +143,4 @@ src:
                             - "/services/state/LgSettingsService.kt"
                             - "/settings/LgSettingsConfigurable.kt"
                             - "/ui/toolwindow/LgControlPanel.kt"
+                            - "/models/AiInteractionMode.kt"
