Claude Code Subagents

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ build
 # LG cache directory
 .lg-cache/
 
-cloned/
-.ai-chat/
-
-decompiled/
+# Claude Code - local settings only
+.claude/settings.local.json
+.claude/*.local.json
+CLAUDE.local.md
+.claude-session.lock
