Первичное полное исправление всех инспекций от Qodana

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -9,7 +9,7 @@ settings.display.name=Listing Generator
 ## CLI Configuration Group
 settings.group.cli=CLI Configuration
 settings.cli.path.label=CLI Path:
-settings.cli.path.browse.title=Select listing-generator Executable
+settings.cli.path.browse.title=Select Listing-Generator Executable
 settings.cli.path.comment=Leave empty for auto-detection via PATH or managed venv
 settings.python.interpreter.label=Python Interpreter:
 settings.python.interpreter.browse.title=Select Python Interpreter
@@ -118,7 +118,7 @@ stats.raw.json.title=Raw JSON
 # Doctor Dialog
 
 ## Dialog Title
-doctor.dialog.title=Listing Generator — Diagnostics
+doctor.dialog.title=Listing Generator - Diagnostics
 
 ## Summary Cards
 doctor.card.config=Config (lg-cfg)
@@ -144,7 +144,7 @@ doctor.progress.reset.cache=Resetting cache...
 doctor.progress.bundle=Building diagnostic bundle...
 
 ## Success Messages
-doctor.bundle.success.title=Bundle Created
+doctor.bundle.success.title=Bundle created
 doctor.bundle.success.message=Diagnostic bundle written to:\n{0}
 doctor.copy.success=JSON copied to clipboard
 
@@ -198,7 +198,7 @@ action.send.ai.progress.text=Generating content for ''{0}''...
 ## Doctor Diagnostics Action
 action.doctor.text=Run Diagnostics
 action.doctor.description=Run diagnostics and show Doctor dialog
-action.doctor.progress=Running Diagnostics...
+action.doctor.progress=Running diagnostics...
 action.doctor.progress.text=Collecting diagnostic information...
 
 ## Reset Cache Action
@@ -206,9 +206,9 @@ action.reset.cache.text=Reset Cache
 action.reset.cache.description=Reset LG cache and rebuild
 action.reset.cache.confirm.title=Confirm Cache Reset
 action.reset.cache.confirm.message=This will clear the local LG cache and rebuild it.\n\nContinue?
-action.reset.cache.progress=Resetting Cache...
+action.reset.cache.progress=Resetting cache...
 action.reset.cache.progress.text=Rebuilding LG cache...
-action.reset.cache.success.title=Cache Reset
+action.reset.cache.success.title=Cache reset
 action.reset.cache.success.message=Cache successfully reset and rebuilt
 
 ## Toggle Tree View Mode Action
@@ -230,7 +230,7 @@ dialog.tags.set.empty=No tags in this set
 dialog.init.title=Create Starter Config
 dialog.init.description=Select a preset to initialize lg-cfg directory:
 dialog.init.preset.label=Preset:
-dialog.init.progress.title=Initializing lg-cfg...
+dialog.init.progress.title=Initializing Lg-Cfg...
 
 ## Status Messages
 dialog.init.status.ready=Ready to initialize
@@ -244,11 +244,12 @@ dialog.init.success.overwritten=Successfully overwritten {0} file(s)
 
 ## Error Messages
 dialog.init.error.title=Initialization Failed
+dialog.init.error.notification.title=Initialization failed
 dialog.init.error.failed=Failed to initialize: {0}
 
 ## Conflict Messages
 dialog.init.conflicts.title=Confirm Overwrite
-dialog.init.conflicts.message=lg-cfg already contains {0} file(s). Overwrite with --force?
+dialog.init.conflicts.message=Lg-cfg already contains {0} file(s). Overwrite with --force?
 dialog.init.conflicts.overwrite=Overwrite
 dialog.init.conflicts.cancel=Cancel
 
@@ -260,11 +261,11 @@ action.open.config.description=Open lg-cfg/sections.yaml
 
 ## Error Messages
 action.open.config.error.title=Error
-action.open.config.error.not.found=sections.yaml not found
+action.open.config.error.not.found=Sections.yaml not found
 
 ## Create Dialog
-action.open.config.create.title=lg-cfg Not Found
-action.open.config.create.message=lg-cfg/sections.yaml not found. Create starter config?
+action.open.config.create.title=Lg-Cfg Not Found
+action.open.config.create.message=Lg-cfg/sections.yaml not found. Create starter config?
 action.open.config.create.yes=Create
 action.open.config.create.no=Cancel
 
