--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ platformVersion = 2025.2.3
 platformPlugins =
 # Example: platformBundledPlugins = com.intellij.java
 # Git4Idea - for Git integration (optional)
-platformBundledPlugins = Git4Idea
+platformBundledPlugins = Git4Idea, org.jetbrains.plugins.terminal
 # Example: platformBundledModules = intellij.spellchecker
 platformBundledModules =
 
