--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -50,6 +50,7 @@ control.group.adaptive.settings=Adaptive Settings
 control.group.inspect=Inspect
 control.group.tokenization=Tokenization Settings
 control.group.utilities=Utilities
+control.group.cli.settings=CLI Provider Settings
 
 ## Field Labels
 control.template.label=Template:
@@ -60,6 +61,10 @@ control.ctx.limit.label=Context Limit:
 control.mode.label=Mode:
 control.target.branch.label=Target Branch:
 control.task.placeholder=Describe current task
+control.cli.scope.label=Scope:
+control.cli.shell.label=Shell:
+control.claude.model.label=Model:
+control.claude.method.label=Method:
 
 ## Empty States
 control.modes.empty=No mode-sets available
