--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -271,4 +271,4 @@ action.open.config.create.no=Cancel
 # Included Files Panel
 
 ## Empty State
-included.empty.text=No files to display. Click "Show Included" to load files.
+included.empty.text=No files to display.<br/>Click "Show Included" to load files.
