Механизм подавления ошибок CLI для неинициализированных проектов

--- a/lg-cfg/sections.yaml
+++ b/lg-cfg/sections.yaml
@@ -92,6 +92,7 @@ src:
                             - "/cli/CliException.kt"
                             - "/cli/CliResultHandler.kt"
                             - "/listeners/LgSettingsChangeListener.kt"
+                            - "/services/LgInitService.kt"
                         - condition: "TAGSET:intellij-plugin:stats"
                           allow:
                             - "**Stats**"
