Неиспользуемые фразы в `LgBundle.properties`

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -1,7 +1,5 @@
 # Tool Window
 toolwindow.stripe.title=LG
-toolwindow.control.tab=Control Panel
-toolwindow.included.tab=Included Files
 
 # Settings
 settings.display.name=Listing Generator
@@ -30,29 +28,27 @@ settings.open.editable.comment=By default, files open as read-only
 ## Enum Display Names
 
 ### InstallStrategy
+# suppress inspection "UnusedProperty"
 settings.install.strategy.MANAGED_VENV=Managed Virtual Environment
+# suppress inspection "UnusedProperty"
 settings.install.strategy.SYSTEM=System Python
+# suppress inspection "UnusedProperty"
 settings.install.strategy.PIPX=pipx
-cli.test.failure.exception=Unexpected error:\n\n{0}
-cli.test.progress.title=Testing CLI Connection...
 
-# Control Panel (Phase 4)
+# Control Panel
 
 ## Group Titles
 control.group.ai.contexts=AI Contexts
 control.group.adaptive.settings=Adaptive Settings
 control.group.inspect=Inspect
 control.group.tokenization=Tokenization Settings
-control.group.utilities=Utilities
 control.group.cli.settings=CLI Provider Settings
 
 ## Field Labels
-control.template.label=Template:
 control.section.label=Section:
 control.library.label=Library:
 control.encoder.label=Encoder:
 control.ctx.limit.label=Context Limit:
-control.mode.label=Mode:
 control.target.branch.label=Target Branch:
 control.task.placeholder=Describe current task
 control.cli.scope.label=Scope:
@@ -75,33 +71,9 @@ control.btn.generate.listing=Generate Listing
 control.btn.show.stats=Show Stats
 control.btn.create.config=Create Starter Config
 control.btn.open.config=Open Config
-control.btn.doctor=Doctor
-control.btn.reset.cache=Reset Cache
 control.btn.settings=Settings
-control.btn.refresh=Refresh
-control.btn.toggle.view=Toggle View Mode
-
-## Stub Feature Names (for notifications)
-control.stub.send.ai=Send to AI
-control.stub.generate.context=Generate Context
-control.stub.show.context.stats=Show Context Stats
-control.stub.configure.tags=Configure Tags
-control.stub.show.included=Show Included Files
-control.stub.generate.listing=Generate Listing
-control.stub.show.stats=Show Stats
-control.stub.create.config=Create starter config
-control.stub.open.config=Open config
-control.stub.doctor=Doctor diagnostics
-control.stub.reset.cache=Reset cache
-control.stub.refresh=Refresh catalogs
-control.stub.settings=Open settings
-control.stub.toggle.view=Toggle view mode
 
 # Stats Dialog
-
-## Labels
-stats.filter.label=Filter:
-stats.files.label=Files
 
 ## Summary Cards
 stats.summary.source.title=Source Data
@@ -117,7 +89,7 @@ stats.raw.json.title=Raw JSON
 # Doctor Dialog
 
 ## Dialog Title
-doctor.dialog.title=Listing Generator - Diagnostics
+doctor.dialog.title=Listing Generator — Diagnostics
 
 ## Summary Cards
 doctor.card.config=Config (lg-cfg)
@@ -145,7 +117,6 @@ doctor.progress.bundle=Building diagnostic bundle...
 ## Success Messages
 doctor.bundle.success.title=Bundle created
 doctor.bundle.success.message=Diagnostic bundle written to:\n{0}
-doctor.copy.success=JSON copied to clipboard
 
 # Actions
 
@@ -163,13 +134,17 @@ action.refresh.error.message=Failed to reload catalog data: {0}
 ## Generate Listing Action
 action.generate.listing.text=Generate Listing
 action.generate.listing.description=Generate listing for selected section
+# suppress inspection "UnusedProperty"
 action.generate.listing.progress=Generating Listing — {0}
+# suppress inspection "UnusedProperty"
 action.generate.listing.progress.text=Generating listing for section ''{0}''...
 
 ## Generate Context Action
 action.generate.context.text=Generate Context
 action.generate.context.description=Generate context for selected template
+# suppress inspection "UnusedProperty"
 action.generate.context.progress=Generating Context — {0}
+# suppress inspection "UnusedProperty"
 action.generate.context.progress.text=Generating context for template ''{0}''...
 
 ## Show Stats Action
@@ -214,7 +189,13 @@ action.reset.cache.success.message=Cache successfully reset and rebuilt
 action.toggle.view.text=Toggle View Mode
 action.toggle.view.description=Switch between tree and flat view modes
 
-# Tags Dialog (Phase 13)
+## Create Starter Config Action
+action.create.config.description=Create starter config
+
+## Settings Action
+action.settings.description=Open settings
+
+# Tags Dialog
 
 ## Dialog Title
 dialog.tags.title=Configure Tags
@@ -231,11 +212,6 @@ dialog.init.description=Select a preset to initialize lg-cfg directory:
 dialog.init.preset.label=Preset:
 dialog.init.progress.title=Initializing Lg-Cfg...
 
-## Status Messages
-dialog.init.status.ready=Ready to initialize
-dialog.init.error.load.presets=Failed to load presets
-dialog.init.error.no.presets=No presets available
-
 ## Success Messages
 dialog.init.success.title=Config Created
 dialog.init.success.message=Successfully created {0} file(s)
@@ -244,7 +220,7 @@ dialog.init.success.overwritten=Successfully overwritten {0} file(s)
 ## Error Messages
 dialog.init.error.title=Initialization Failed
 dialog.init.error.notification.title=Initialization failed
-dialog.init.error.failed=Failed to initialize: {0}
+dialog.init.error.load.presets=Failed to load presets
 
 ## Conflict Messages
 dialog.init.conflicts.title=Confirm Overwrite
@@ -255,7 +231,6 @@ dialog.init.conflicts.cancel=Cancel
 # Open Config Action
 
 ## Action Labels
-action.open.config.text=Open Config
 action.open.config.description=Open lg-cfg/sections.yaml
 
 ## Error Messages
