Удаление упоминаний фаз из кодовой базы

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -69,9 +69,6 @@ control.btn.configure.tags.with.count=Configure Tags ({0})
 control.btn.show.included=Show Included
 control.btn.generate.listing=Generate Listing
 control.btn.show.stats=Show Stats
-control.btn.create.config=Create Starter Config
-control.btn.open.config=Open Config
-control.btn.settings=Settings
 
 # Stats Dialog
 
@@ -190,9 +187,11 @@ action.toggle.view.text=Toggle View Mode
 action.toggle.view.description=Switch between tree and flat view modes
 
 ## Create Starter Config Action
-action.create.config.description=Create starter config
+action.create.config.text=Create Starter Config
+action.create.config.description=Create starter lg-cfg configuration using presets
 
 ## Settings Action
+action.settings.text=Settings
 action.settings.description=Open settings
 
 # Tags Dialog
@@ -231,6 +230,7 @@ dialog.init.conflicts.cancel=Cancel
 # Open Config Action
 
 ## Action Labels
+action.open.config.text=Open Config
 action.open.config.description=Open lg-cfg/sections.yaml
 
 ## Error Messages
